<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_individual_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lucas.lucasvanberkel_pset3.IndividualScreen">

    <ImageView
        android:contentDescription="@string/posterDec"
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:id="@+id/moviePoster"
        android:src="@drawable/bourneLegacy"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_toEndOf="@+id/moviePoster"
        android:layout_toRightOf="@id/moviePoster"
        android:id="@+id/movieTitle"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="30sp"
        android:text="@string/movieTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/movieTitle"
        android:id="@+id/movieYear"
        android:layout_toRightOf="@+id/moviePoster"
        android:layout_toEndOf="@id/moviePoster"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/movieYear"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/movieYear"
        android:layout_toRightOf="@id/moviePoster"
        android:layout_toEndOf="@id/moviePoster"
        android:textSize="20sp"
        android:id="@+id/movieReg"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/movieReg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movieReg"
        android:layout_toRightOf="@id/moviePoster"
        android:layout_toEndOf="@id/moviePoster"
        android:ellipsize="end"
        android:maxLines="3"
        android:id="@+id/movieActors"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:text="@string/movieActors"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@id/moviePoster"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/movieSummary"
        android:text="@string/movieSummary" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addToWatchlist"
        android:text="@string/buttonToAdd"
        android:layout_above="@id/removeFromWatchlist"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/removeFromWatchlist"
        android:text="@string/buttonToRemove"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>
</RelativeLayout>
