<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lucas.lucasvanberkel_pset3.startScreen">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/startWatchButton"
        android:id="@+id/startWatchButton"
        android:padding="20dp"
        android:onClick="watchList"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@+id/startWatchButton"
        android:layout_centerHorizontal="true"
        android:text="@string/startSearchButton"
        android:layout_margin="20dp"
        android:id="@+id/startSearchButton"
        android:onClick="startSearch"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/startSearchButton"
        android:visibility="invisible"
        android:id="@+id/searchBar"
        android:layout_margin="10dp"
        android:hint="@string/searchHint"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/searchBar"
        android:layout_toEndOf="@+id/searchBar"
        android:layout_below="@id/startSearchButton"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/searchButton"
        android:id="@+id/searchButton"
        android:onClick="search"/>
</RelativeLayout>
